chore(users): modify fields of the table base on sign in form
