# src/controllers/user-controller.js
@@ -1,27 +1,52 @@
 const userService = require("../services/user-service");
-const joi = require('joi');
+const joi = require('joi').extend(require('@joi/date'));
 
 const user = joi.object({
+    mail: joi.string()
+        .email()
+        .max(100)
+        .required(),
+    password: joi.string()
+        .min(8)
+        .max(100)
+        .required(),
     name: joi.string()
         .min(3)
         .max(50)
         .required(),
-    lastName: joi.string()
+    lastname: joi.string()
         .min(3)
-        .max(50)
-        .required(),
-    mail: joi.string()
-        .email()
-        .required(),
-    password: joi.string()
-        .pattern(new RegExp('^[a-zA-Z0-9]{8,30}$'))
+        .max(100)
         .required(),
     curp: joi.string()
         .uppercase()
-        .max(18)
+        .max(20)
         .required(),
-    phone: joi.string()
-        .alphanum()
+    birth_date: joi.date().utc()
+        .format('YYYY-MM-DD')
+        .required(),
+    gender: joi.string()
+        .max(20)
+        .required(),
+    state: joi.string()
+        .max(50)
+        .required(),
+    town: joi.string()
+        .max(50)
+        .required(),
+    neighborhood: joi.string()
+        .max(50)
+        .required(),
+    program: joi.string()
+        .max(100)
+        .required(),
+    tags: joi.string()
+        .max(15)
+        .required(),
+    emprendedor: joi.string()
+        .max(20)
+        .required(),
+    aliado: joi.string()
         .max(20)
         .required()
 });
