# src/swagger/swagger.json
@@ -429,22 +429,46 @@
     "definitions": {
       "User": {
         "properties": {
-          "name":{
-            "type": "string"
-          },
-          "lastName":{
-            "type": "string"
-          },
           "mail":{
             "type": "string"
           },
           "password":{
             "type": "string"
           },
+          "name":{
+            "type": "string"
+          },
+          "lastname":{
+            "type": "string"
+          },
           "curp":{
             "type": "string"
           },
-          "phone":{
+          "birth_date":{
+            "type": "string"
+          },
+          "gender":{
+            "type": "string"
+          },
+          "state":{
+            "type": "string"
+          },
+          "town":{
+            "type": "string"
+          },
+          "neighborhood":{
+            "type": "string"
+          },
+          "program":{
+            "type": "string"
+          },
+          "tags":{
+            "type": "string"
+          },
+          "emprendedor":{
+            "type": "string"
+          },
+          "aliado":{
             "type": "string"
           }
         },
